--- a/src/simple_bot_joint_state_publisher/package.xml
+++ b/src/simple_bot_joint_state_publisher/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>simple_bot_joint_state_publisher</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="wiktorbajor1@gmail.com">ros</maintainer>
-  <license>TODO: License declaration</license>
+  <version>1.0.0</version>
+  <description>Simple one joint joint_states publisher.</description>
+  <maintainer email="wiktorbajor1@gmail.com">wiktorbajor1@gmail.com</maintainer>
+  <license>Apache License 2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
